force-app/main/default/objects/Orden_de_compra__c/Orden_de_compra__c.object-meta.xml
<CustomObject>
    <label>Orden de compra</label>
    <nameField>
        <label>Nombre de Orden de compra</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ordenes de compra</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>