force-app/main/default/objects/Orden_de_compra__c/fields/Condicion_de_pago__c.field-meta.xml
<CustomField>
    <fullName>Condicion_de_pago__c</fullName>
    <label>Condicion de pago</label>
    <type>TextArea</type>
</CustomField>