force-app/main/default/objects/Orden_de_compra__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ingresada</fullName>
                <default>true</default>
                <label>Ingresada</label>
            </value>
            <value>
                <fullName>Para aprobar</fullName>
            </value>
            <value>
                <fullName>Aprobada</fullName>
            </value>
            <value>
                <fullName>Rechazada</fullName>
            </value>
            <value>
                <fullName>Renegociar</fullName>
            </value>
            <value>
                <fullName>Pagada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>