force-app/main/default/objects/Orden_de_compra__c/fields/Indicador_para_ajuste__c.field-meta.xml
<CustomField>
    <fullName>Indicador_para_ajuste__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Indicador para ajuste</label>
    <referenceTo>Indicador__c</referenceTo>
    <relationshipLabel>Ordenes de compra</relationshipLabel>
    <relationshipName>Ordenes_de_compra</relationshipName>
    <type>Lookup</type>
</CustomField>