force-app/main/default/objects/Orden_de_compra__c/fields/Mail_proveedor__c.field-meta.xml
<CustomField>
    <fullName>Mail_proveedor__c</fullName>
    <formula>Proveedor__r.Mail__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mail proveedor</label>
    <type>Text</type>
</CustomField>