force-app/main/default/objects/Orden_de_compra__c/fields/Ordenes_de_pago_ingresadas__c.field-meta.xml
<CustomField>
    <fullName>Ordenes_de_pago_ingresadas__c</fullName>
    <label>Ordenes de pago ingresadas</label>
    <summarizedField>Orden_de_pago__c.Monto__c</summarizedField>
    <summaryForeignKey>Orden_de_pago__c.Orden_de_compra__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>