force-app/main/default/objects/Orden_de_compra__c/fields/Ordenes_de_pago_pagadas__c.field-meta.xml
<CustomField>
    <fullName>Ordenes_de_pago_pagadas__c</fullName>
    <label>Ordenes de pago pagadas</label>
    <summarizedField>Orden_de_pago__c.Monto__c</summarizedField>
    <summaryFilterItems>
        <field>Orden_de_pago__c.Estado__c</field>
        <operation>equals</operation>
        <value>Pagada</value>
    </summaryFilterItems>
    <summaryForeignKey>Orden_de_pago__c.Orden_de_compra__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>