force-app/main/default/objects/Orden_de_compra__c/fields/Ordenes_de_pago_pagadas_en_dolares__c.field-meta.xml
<CustomField>
    <fullName>Ordenes_de_pago_pagadas_en_dolares__c</fullName>
    <formula>if( Moneda__r.Name = &#39;Pesos Argentinos&#39; ,  Ordenes_de_pago_pagadas__c  / if (Cotizacion_dolar__c &lt;&gt; 0, Cotizacion_dolar__c, Moneda__r.Ultima_cotizacion__c), Ordenes_de_pago_pagadas__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ordenes de pago pagadas en dolares</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>