force-app/main/default/objects/Orden_de_compra__c/fields/Periodo_indicador_base__c.field-meta.xml
<CustomField>
    <fullName>Periodo_indicador_base__c</fullName>
    <label>Periodo indicador base</label>
    <length>7</length>
    <type>Text</type>
</CustomField>