force-app/main/default/objects/Orden_de_compra__c/fields/Presupuesto__c.field-meta.xml
<CustomField>
    <fullName>Presupuesto__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Presupuesto</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Proveedor__c</field>
            <operation>equals</operation>
            <valueField>Presupuesto_base__c.Proveedor__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Presupuesto_base__c</referenceTo>
    <relationshipLabel>Ordenes de compra</relationshipLabel>
    <relationshipName>Ordenes_de_compra</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>