force-app/main/default/objects/Orden_de_compra__c/fields/Recibos_emitidos__c.field-meta.xml
<CustomField>
    <fullName>Recibos_emitidos__c</fullName>
    <label>Recibos emitidos</label>
    <summarizedField>Recibo__c.Importe_pagado__c</summarizedField>
    <summaryForeignKey>Recibo__c.Orden_de_compra__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>