force-app/main/default/objects/Orden_de_compra__c/fields/Remitos_pagados__c.field-meta.xml
<CustomField>
    <fullName>Remitos_pagados__c</fullName>
    <label>Remitos pagados</label>
    <summarizedField>Remito__c.Importe__c</summarizedField>
    <summaryForeignKey>Remito__c.Orden_de_compra__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>