force-app/main/default/objects/Orden_de_compra__c/fields/Requiere_certificacion__c.field-meta.xml
<CustomField>
    <fullName>Requiere_certificacion__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Requiere certificación?</label>
    <type>Checkbox</type>
</CustomField>