force-app/main/default/objects/Orden_de_compra__c/fields/Responsable_carga__c.field-meta.xml
<CustomField>
    <fullName>Responsable_carga__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Responsable carga</label>
    <referenceTo>Responsable__c</referenceTo>
    <relationshipLabel>Ordenes de compra</relationshipLabel>
    <relationshipName>Ordenes_de_compra</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>