force-app/main/default/objects/Orden_de_compra__c/fields/Saldo_a_pagar__c.field-meta.xml
<CustomField>
    <fullName>Saldo_a_pagar__c</fullName>
    <formula>Valor_total__c   -   Ordenes_de_pago_pagadas__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saldo a pagar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>