force-app/main/default/objects/Orden_de_compra__c/fields/Saldo_a_pagar_en_dolares_actualizados__c.field-meta.xml
<CustomField>
    <fullName>Saldo_a_pagar_en_dolares_actualizados__c</fullName>
    <formula>if (Moneda__r.Name = &#39;Pesos Argentinos&#39; ,   Saldo_a_pagar__c / if (Cotizacion_dolar__c &lt;&gt; 0, Cotizacion_dolar__c, Moneda__r.Ultima_cotizacion__c), Saldo_a_pagar__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saldo a pagar en dolares actualizados</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>