force-app/main/default/objects/Orden_de_compra__c/fields/Saldo_a_pagar_en_pesos__c.field-meta.xml
<CustomField>
    <fullName>Saldo_a_pagar_en_pesos__c</fullName>
    <formula>Valor_en_pesos__c -   Ordenes_de_pago_pagadas_en_pesos__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saldo a pagar en pesos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>