force-app/main/default/objects/Orden_de_compra__c/fields/Sociedad__c.field-meta.xml
<CustomField>
    <fullName>Sociedad__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Sociedad</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Sociedad desarrolladora</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ordenes de compra (Sociedad)</relationshipLabel>
    <relationshipName>Ordenes_de_compra1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>