force-app/main/default/objects/Orden_de_compra__c/fields/Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Subtotal__c</fullName>
    <label>Subtotal</label>
    <summarizedField>Orden_de_compra_entrega__c.Subtotal__c</summarizedField>
    <summaryForeignKey>Orden_de_compra_entrega__c.Orden_de_compra__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>