force-app/main/default/objects/Orden_de_compra__c/fields/Suprimir_controles__c.field-meta.xml
<CustomField>
    <fullName>Suprimir_controles__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suprimir controles</label>
    <type>Checkbox</type>
</CustomField>