force-app/main/default/objects/Orden_de_compra__c/fields/Telefono_proveedor__c.field-meta.xml
<CustomField>
    <fullName>Telefono_proveedor__c</fullName>
    <formula>Proveedor__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Telefono proveedor</label>
    <type>Text</type>
</CustomField>