force-app/main/default/objects/Orden_de_compra__c/fields/Total_certificado__c.field-meta.xml
<CustomField>
    <fullName>Total_certificado__c</fullName>
    <label>Total certificado</label>
    <summarizedField>Certificacion__c.Total_certificado__c</summarizedField>
    <summaryForeignKey>Certificacion__c.Orden_de_compra__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>