force-app/main/default/objects/Orden_de_compra__c/fields/Total_facturado__c.field-meta.xml
<CustomField>
    <fullName>Total_facturado__c</fullName>
    <label>Total facturado</label>
    <summarizedField>Factura__c.Importe_total__c</summarizedField>
    <summaryFilterItems>
        <field>Factura__c.No_controlar_importe_OC__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Factura__c.Orden_de_compra__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>