force-app/main/default/objects/Orden_de_compra__c/fields/Valor_en_dolares_actualizado__c.field-meta.xml
<CustomField>
    <fullName>Valor_en_dolares_actualizado__c</fullName>
    <formula>if ( Ordenes_de_pago_convertidas_a_dolares__c &gt; 0, Ordenes_de_pago_convertidas_a_dolares__c +  Saldo_a_pagar_en_dolares_actualizados__c ,  Valor_en_dolares__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor en dolares actualizado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>