force-app/main/default/objects/Orden_de_compra__c/fields/Valor_en_pesos__c.field-meta.xml
<CustomField>
    <fullName>Valor_en_pesos__c</fullName>
    <formula>if( Moneda__r.Name = &#39;Dolares&#39; , Valor_total__c * if (Cotizacion_dolar__c &lt;&gt; 0, Cotizacion_dolar__c, Moneda__r.Ultima_cotizacion__c), Valor_total__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor en pesos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>