force-app/main/default/objects/Orden_de_compra__c/fields/Valor_Impuestos__c.field-meta.xml
<CustomField>
    <fullName>Valor_Impuestos__c</fullName>
    <label>Valor Impuestos</label>
    <summarizedField>Orden_de_compra_entrega__c.Valor_impuestos__c</summarizedField>
    <summaryForeignKey>Orden_de_compra_entrega__c.Orden_de_compra__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>