force-app/main/default/objects/Orden_de_compra__c/validationRules/Control_detalle_ingresado.validationRule-meta.xml
<ValidationRule>
    <fullName>Control_detalle_ingresado</fullName>
    <active>true</active>
    <errorConditionFormula>if ( Suprimir_controles__c == false, Ordenes_de_pago_ingresadas__c &gt; Valor_total__c, false)</errorConditionFormula>
    <errorMessage>El monto de las ordenes de pago ingresadas supera el monto de la orden de compra.
Revise el detalle de la orden de compra</errorMessage>
</ValidationRule>