force-app/main/default/objects/Orden_de_compra__c/validationRules/Control_monto_facturado.validationRule-meta.xml
<ValidationRule>
    <fullName>Control_monto_facturado</fullName>
    <active>true</active>
    <errorConditionFormula>if ( Suprimir_controles__c == false, 
Total_facturado__c &gt; Valor_total__c,false)</errorConditionFormula>
    <errorMessage>No se puede ingresar facturas que superen el valor total de la orden de compra</errorMessage>
</ValidationRule>