force-app/main/default/objects/Orden_de_compra__c/validationRules/Periodo_indicador_valido.validationRule-meta.xml
<ValidationRule>
    <fullName>Periodo_indicador_valido</fullName>
    <active>true</active>
    <errorConditionFormula>!REGEX(
 Periodo_indicador_base__c  ,
&quot;^(\\d{2}\\-\\d{4})?$&quot;
)</errorConditionFormula>
    <errorDisplayField>Periodo_indicador_base__c</errorDisplayField>
    <errorMessage>El formato valido es mm-yyyy</errorMessage>
</ValidationRule>