force-app/main/default/objects/Orden_de_compra__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Obra__c</columns>
    <columns>Proveedor__c</columns>
    <columns>NAME</columns>
    <columns>Subtotal__c</columns>
    <columns>Valor_total__c</columns>
    <columns>Total_certificado__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>