force-app/main/default/objects/Orden_de_compra__c/listViews/Aprobadas.listView-meta.xml
<ListView>
    <fullName>Aprobadas</fullName>
    <columns>NAME</columns>
    <columns>Proveedor__c</columns>
    <columns>Subtotal__c</columns>
    <columns>Valor_total__c</columns>
    <columns>Saldo_a_pagar__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Estado__c</field>
        <operation>equals</operation>
        <value>Aprobada</value>
    </filters>
    <label>Aprobadas</label>
</ListView>