force-app/main/default/objects/Orden_de_compra__c/listViews/Pendientes_de_Pago.listView-meta.xml
<ListView>
    <fullName>Pendientes_de_Pago</fullName>
    <columns>NAME</columns>
    <columns>Proveedor__c</columns>
    <columns>Obra__c</columns>
    <columns>Valor_total__c</columns>
    <columns>Saldo_a_pagar__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Estado__c</field>
        <operation>equals</operation>
        <value>Ingresada,Para aprobar,Aprobada</value>
    </filters>
    <label>Pendientes de Pago</label>
</ListView>